Bug 129450 - FILEOPEN DOCX Bottom border of table is lost
Summary: FILEOPEN DOCX Bottom border of table is lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Szabolcs Toth
URL:
Whiteboard: target:6.5.0 target:6.4.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-12-17 14:37 UTC by NISZ LibreOffice Team
Modified: 2020-01-08 13:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (18.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-12-17 14:38 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (70.38 KB, image/png)
2019-12-17 14:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-12-17 14:37:39 UTC
Description:
Attached DOCX file contains a 1 row 3 column table with internal borders turned off.
In Writer the bottom border of the table is missing on opening the file.


Steps to Reproduce:
1.	Create a simple table in Word with 1 row and 3 columns
2.	Turn off the internal borders of the table
3.	Save the file and open it in Writer

Actual Results:
The bottom border of the table is missing.


Expected Results:
Bottom border of the table should be present.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:

Verzió: 6.5.0.0.alpha0+ (x64)
Build az.: 3e33a11d8a553a99bd5f23940a65c301924198fb
CPU szálak: 8; OS: Windows 10.0 Build 17134; Felületmegjelenítés: GL; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL

Bad in:
https://gerrit.libreoffice.org/plugins/gitiles/core/+log/3e33a11d8a553a99bd5f23940a65c301924198fb

But still good in:

https://gerrit.libreoffice.org/plugins/gitiles/core/+log/e57d90cd4e51a1353eafc87bb29cfe6076704a7c
Comment 1 NISZ LibreOffice Team 2019-12-17 14:38:24 UTC
Created attachment 156626 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-12-17 14:39:24 UTC
Created attachment 156627 [details]
Screenshot of the original document side by side in Word and Writer
Comment 3 NISZ LibreOffice Team 2019-12-17 14:40:27 UTC
Adding CC to: Szabolcs Toth
Comment 4 Xisco Faulí 2019-12-17 14:53:42 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=dff3ae42d94fdf97c856c4a4d1e66234604927f4

author	Szabolcs Toth <szabolcs450@gmail.com>	2019-12-07 08:57:32 +0100
committer	László Németh <nemeth@numbertext.org>	2019-12-16 09:12:38 +0100
commit dff3ae42d94fdf97c856c4a4d1e66234604927f4 (patch)
tree e657f1ecebc2a7311a9c5a3f4ef248e8b5cb3a3e
parent e57d90cd4e51a1353eafc87bb29cfe6076704a7c (diff)
tdf#129242 Regression fixed for one cell table borders

Bisected with: bibisect-linux64-6.5

Adding Cc: to Szabolcs Toth
Comment 5 Szabolcs Toth 2019-12-17 15:08:33 UTC
This was bad in 6.2.5 and around and accidentaly working in master (6.5.0) because of the error in my first fix.
Fixed the fix and this is bad again.
Already uploading a fix for this.
Comment 6 Commit Notification 2020-01-06 11:19:45 UTC
Szabolcs Toth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6b1bd2699b0bdad6dc42db741dea0717cf7c1d36

tdf#129450 DOCX import: fix bottom border of 1-row tables

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-01-07 15:50:58 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: bf540873f5e258452fed5006f65a403c95e7872a
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Szabolcs, thanks for fixing this issue!
Comment 8 Commit Notification 2020-01-08 13:45:32 UTC
Szabolcs Toth committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/e4b8fc7563087e82a659f6b697a986b53e51876c

tdf#129450 DOCX import: fix bottom border of 1-row tables

It will be available in 6.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.