tdf#129450 Missing bottom border in one row tables.

Docx import.
One row tables are missing the bottom border when inside borders
are disabled.
This was because empty horizontal borders were applied to the
bottom.
Fixed by removing horizontal borders for one row tables.

Change-Id: I40140bf63297189edad13088f98fc5f869969c2d